--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
         "react-dom": "^16.2.0",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "webpack-cli": "^3.3.12"
+    },
+    "dependencies": {
+        "react-laravel-paginex": "^2.0.8",
+        "react-router-dom": "^5.2.0",
+        "webpack": "^4.44.2"
     }
 }
